refactor: MM-92 Move CommentInvestigator logic into NodeFinder inner class. (#73)
Reviewed-on: https://gitea.busybunyip.com/medical-models/medical-models-service/pulls/73
Co-authored-by: JonathonClifford <jono.cliff@gmail.com>
Co-committed-by: JonathonClifford <jono.cliff@gmail.com>